--- a/_config.yml
+++ b/_config.yml
@@ -28,3 +28,6 @@ description:
 # http://www.ruby-doc.org/core-1.9.2/Time.html#method-i-strftime
 # Additionally, %o will give you the ordinal representation of the day
 date_format: "ordinal"
+
+disqus_short_name: linuxinternals1
+disqus_show_comment_count: true
