--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://www.linuxinternals.org
-title: JoelFernand.es
+title: JoelFernandes.org
 subtitle: My dumping ground for what I've been upto
 author: Joel Fernandes
 github_user: joelagnel
