--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of 
 
 titlecase: true       # Converts page and post titles to titlecase
 
-plugins: [jekyll-paginate]
+plugins_dir: ['_plugins']
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
@@ -33,3 +33,4 @@ date_format: "ordinal"
 
 disqus_short_name: linuxinternals1
 disqus_show_comment_count: true
+gems: [jekyll-paginate]
