--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://www.linuxinternals.org
 title: JoelFernandes.org
-subtitle: My dumping ground for what I've been upto
+subtitle: "Age is of no importance unless you're a cheese -- Billie Burke"
 author: Joel Fernandes
 github_user: joelagnel
 
