--- a/_config.yml
+++ b/_config.yml
@@ -33,4 +33,4 @@ date_format: "ordinal"
 
 disqus_short_name: linuxinternals1
 disqus_show_comment_count: true
-gems: [jekyll-paginate]
+plugins: [jekyll-paginate]
