Add CList blog post and Disqus comments
- New blog post: CList - Iterating C Linked Lists from Rust in the Kernel
- Added Disqus comments to post template
- Synced site structure updates

--- a/_config.yml
+++ b/_config.yml
@@ -15,5 +15,6 @@ exclude:
   - Gemfile.lock
   - README.md
   - _reference
-  - backup-old
-  - hugo
+
+# Disqus comments
+disqus_short_name: linuxinternals1
